<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->
    <string name="label">Capsules</string>
    <string name="app_name">Capsules</string>

    <!-- Action Bar Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_sort">Sort</string>
    <string name="action_created">Toggle Capsules</string>
    <string name="action_discovered">Toggle Discoveries</string>
    <string name="action_satellite">Toggle Satellite</string>
    <string name="action_collection">My Collection</string>

    <!--
        Titles
    -->
    <!-- General -->
    <string name="title_about">About</string>
    <!-- Accounts -->
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_accounts">Accounts</string>
    <!-- Capsules -->
    <string name="title_my_collection">My Collection</string>
    <string name="title_my_capsules">My Capsules</string>
    <string name="title_my_discoveries">My Discoveries</string>
    <!-- Upload source chooser -->
    <string name="title_upload_source_chooser">Choose</string>

    <!--
        Activities
    -->
    <!-- MapActivity -->
    <string name="map_during_open_capsule">Discovering...</string>
    <string name="map_new_capsule_dialog_title">Add a Capsule?</string>
    <string name="map_new_capsule_dialog_message">After dropping a new Capsule, you may alter its position by holding and dragging it.  When you find the correct placement, you can click on the Capsule to finish creating it.</string>
    <string name="map_new_capsule_marker_infowindow_snippet">Click to finalize</string>
    <!-- CapsuleActivity -->
    <string name="title_activity_capsule">CapsuleActivity</string>
    <!-- CapsuleListActivity -->
    <string name="title_activity_capsule_list">My Collection</string>
    <!-- CapsuleEditorActivity -->
    <string name="title_activity_capsule_editor">Capsule Editor</string>

    <!--
        Input controls
    -->
    <!-- User labels -->
    <string name="label_username">Username</string>
    <string name="label_email">E-mail Address</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_upload_image">Image</string>
    <!-- Capsule -->
    <string name="label_capsule_name">Name</string>
    <!-- Memoir -->
    <string name="label_memoir_title">Title</string>
    <string name="label_memoir_message">Message</string>
    <!-- Sort -->
    <string name="label_search">Search</string>
    <string name="label_sort">Sort</string>
    <!-- Buttons -->
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_add_account">Add Account</string>
    <string name="label_save">Save</string>
    <string name="label_reset_to_defaults">Reset to defaults</string>
    <string name="label_reset">Reset</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_choose_image">Choose an image&#8230;</string>
    <string name="label_update_location">Update Location</string>
    <!-- Digits -->
    <string name="alphanumeric_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>

    <!--
        Progress indicators
    -->
    <!-- General -->
    <string name="progress_please_wait">Please wait&#8230;</string>
    <!-- Capsule -->
    <string name="progress_saving_capsule">Saving the capsule&#8230;</string>

    <!--
        Result messages
    -->
    <!-- General -->
    <string name="result_complete">Complete!</string>
    <string name="result_error_encountered">The process encountered an error.</string>
    <!-- Capsule -->
    <string name="result_opened_capsule">Opened!</string>

    <!--
        Error messages
    -->
    <!-- General validation -->
    <string name="validation_fill_all">Please fill out all the fields.</string>
    <string name="validation_email">Please enter a valid e-mail address.</string>
    <!-- User validation -->
    <string name="validation_username">Please enter a username.</string>
    <string name="validation_password">Please enter a password.</string>
    <string name="validation_password_confirmation">Please confirm the password.</string>
    <string name="validation_password_match">The passwords do not match.</string>
    <!-- Capsule validation -->
    <string name="validation_capsule_missing">The capsule data could not be found.</string>
    <string name="validation_capsule_name">Please enter a valid capsule name.</string>
    <!-- Memoir validation -->
    <string name="validation_memoir_missing">The image attachment data could not be found.</string>
    <string name="validation_memoir_missing_title">Please enter a valid image attachment title.</string>
    <!-- Upload validation -->
    <string name="validation_upload_missing">An upload file was not chosen.</string>
    <string name="validation_upload_exceeds_size_limit">The chosen upload exceeds the file limit:\u0020</string>
    <!-- Authentication -->
    <string name="error_missing_auth_token">A valid authentication token was not received.</string>
    <string name="error_no_account">You are not currently logged into an account.</string>
    <!-- Capsules -->
    <string name="error_cannot_retrieve_undiscovered">There was a problem scanning the area for new Capsules</string>
    <string name="error_cannot_open_capsule">The capsule could not be opened.</string>
    <string name="error_cannot_open_missing_data">Something was missing so the capsule could not be opened.</string>
    <string name="error_cannot_load_capsules">The capsules could not be loaded.</string>
    <!-- HTTP -->
    <string name="error_cannot_parse_http_response">The HTTP response could not be parsed.</string>
    <!-- Google API -->
    <string name="error_google_api_cannot_connect">The Google API services cannot be reached.</string>
    <string name="error_cannot_retrieve_location">Your current location could no be retrieved.</string>
    <!-- Map -->
    <string name="error_marker_too_far">The capsule is too far away to open.</string>
    <!-- Upload -->
    <string name="error_upload_file_not_found">The file could not be found.  Please try choosing another.</string>
    <string name="error_upload_file_content_empty">The file content was empty.</string>
    <string name="error_upload_cannot_process">The file could not be processed.</string>

    <!--
        Navigation Drawer
    -->
    <!-- Headers Items -->
    <string name="navigation_drawer_header_toggles">TOGGLES</string>
    <string name="navigation_drawer_header_links">LINKS</string>
    <!-- Toggle Items -->
    <string-array name="navigation_drawer_toggles">
        <item>Capsules</item>
        <item>Discoveries</item>
        <item>Satellite</item>
    </string-array>
    <!-- Link Items -->
    <string-array name="navigation_drawer_links">
        <item>Capsules</item>
        <item>Discoveries</item>
        <item>Bury a Capsule</item>
        <item>Find a Capsule</item>
    </string-array>

    <!--
        Capsule Sort
    -->
    <!-- Sort labels -->
    <string name="label_alphabetical">A - Z</string>
    <string name="label_best_rating">Best Rating</string>
    <string name="label_most_discoveries">Most Discoveries</string>
    <string name="label_most_favorites">Most Favorites</string>
    <!-- Sort parameter values -->
    <string name="sort_key_alphabetical">1</string>
    <string name="sort_key_rating_desc">2</string>
    <string name="sort_key_discoveries_desc">3</string>
    <string name="sort_key_favorites_desc">4</string>
    <!-- Sort parameter values array -->
    <string-array name="sort_key_values">
        <item>@string/sort_key_alphabetical</item>
        <item>@string/sort_key_rating_desc</item>
        <item>@string/sort_key_discoveries_desc</item>
        <item>@string/sort_key_favorites_desc</item>
    </string-array>
    <!-- Sort options array -->
    <string-array name="sort_options">
        <item>@string/label_alphabetical</item>
        <item>@string/label_best_rating</item>
        <item>@string/label_most_discoveries</item>
        <item>@string/label_most_favorites</item>
    </string-array>

    <!--
        Map
    -->
    <!-- Info Windows -->
    <string name="map_new_capsule">New Capsule</string>

    <!--
        Content Descriptions
    -->
    <string name="description_map_menu_button">Open Map Menu</string>
</resources>
