<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.brettnamba.capsules.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_collection"
        android:orderInCategory="100"
        android:title="@string/action_collection"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_created"
        android:orderInCategory="100"
        android:title="@string/action_created"
        app:showAsAction="never"
        android:checkable="true" />
    
    <item
        android:id="@+id/action_discovered"
        android:orderInCategory="100"
        android:title="@string/action_discovered"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true" />
    
    <item
        android:id="@+id/action_satellite"
        android:orderInCategory="100"
        android:title="@string/action_satellite"
        app:showAsAction="never"
        android:checkable="true" />

</menu>
